Set Up Freemarker and Static Resources

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 
+spring.freemarker.suffix: .ftl
 
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/vessellsMVC
+spring.datasource.url = jdbc:mysql://localhost:3306/vessellsmvc
 spring.datasource.username = root
 spring.datasource.password = root
 # spring.datasource.testWhileIdle = true
